objects/Pizza_Order_Item__c.object
<CustomObject>
    <fields>
        <fullName>Cost__c</fullName>
        <label>Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <label>Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pizza_Base__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pizza_Base</label>
        <referenceTo>Pizza_Base__c</referenceTo>
        <relationshipLabel>Pizza_Order_Items</relationshipLabel>
        <relationshipName>Pizza_Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pizza_Order__c</fullName>
        <label>Pizza_Order</label>
        <referenceTo>Pizza_Order__c</referenceTo>
        <relationshipLabel>Pizza_Order_Items</relationshipLabel>
        <relationshipName>Pizza_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Pizza__c</fullName>
        <label>Pizza</label>
        <referenceTo>Pizza__c</referenceTo>
        <relationshipLabel>Pizza_Order_Items</relationshipLabel>
        <relationshipName>Pizza_Order_Items</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Pizza_Order_Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORDER_ITEM_I-{0000000}</displayFormat>
        <label>Pizza Order Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pizza_Order_Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>